# LitterAnalysis

./: .gitignore  README.md  pyproject.toml
src/: main.py
storage/data/: settings.json
