[project]
name = "litteranalysis"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Mirco Gijsens", email = "mirco.gijsens@gmail.com" }
]
dependencies = [
  "flet==0.27.6",
   "numpy>=1.23.0",
    "matplotlib>=3.3.0",
    "opencv-python>=4.6.0",
    "pillow>=7.1.2",
    "pyyaml>=5.3.1",
    "requests>=2.23.0",
    "scipy>=1.4.1",
     "torch>=1.8.0,!=2.4.0; sys_platform == 'win32'",
    "torch>=1.8.0; sys_platform != 'win32'",
    "torchvision>=0.9.0",
    "tqdm>=4.64.0", # progress bars
    "psutil", # system utilization
    "py-cpuinfo", # display CPU info
    "pandas>=1.1.4",
    "seaborn>=0.11.0", # plotting
    "ultralytics-thop>=2.0.0", 
    "ultralytics",  # YOLO support
    "firebase-admin>=6.0.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-firestore>=2.14.0",
    "google-auth>=2.20.0",
    "google-auth-oauthlib>=1.0.0",
    "openpyxl>=3.1.2",
    platformdirs = "^4.2.0"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "org.citytoocean"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "litteranalysis"

# company name to display in about app dialogs
company = "City to Ocean"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by City to Ocean"

[tool.flet.app]
path = "src"
assets = ["assets"]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}

[tool.flet.app.boot_screen]
show = true
message = "Preparing the app for its first launch…"

[tool.flet.app.startup_screen]
show = true
message = "Starting up the app…"